[FIX] Cleanroom fixes